--- a/docs/angular-ui-kit/customizations/custom-iconpack.mdx
+++ b/docs/angular-ui-kit/customizations/custom-iconpack.mdx
@@ -20,7 +20,7 @@ Customizing the meeting icons involve the following steps:
     1. Install the package using npm or Yarn.
 
 ```bash npm2yarn
-npm install @ProductDBsdk/angular-ui-kit @ProductDBsdk/web-core
+npm install @dytesdk/angular-ui-kit @dytesdk/web-core
 ```
 
 2. Create a meeting room using the [Create Meeting API](/api#/operations/create_meeting).
