--- a/docs/angular-ui-kit/customizations/custom-locale.mdx
+++ b/docs/angular-ui-kit/customizations/custom-locale.mdx
@@ -23,7 +23,7 @@ Customizing the locale involve the following steps:
     1. Install the package using npm or Yarn.
 
 ```bash npm2yarn
-npm install @ProductDBsdk/angular-ui-kit @ProductDBsdk/web-core
+npm install @dytesdk/angular-ui-kit @dytesdk/web-core
 ```
 
 2. Create a meeting room using the [Create Meeting API](/api#/operations/create_meeting).
@@ -59,7 +59,7 @@ Now that you've integrated ProductDB SDK into your application successfully, let
 ProductDB's default language pack can be imported like so.
 
 ```jsx
-import { defaultLanguage, useLanguage } from '@ProductDBsdk/angular-ui-kit';
+import { defaultLanguage, useLanguage } from '@dytesdk/angular-ui-kit';
 ```
 
 In order to replace ProductDB's default locale set with your own, you can pass your own locale to the `t` prop exposed by the UI components.
