--- a/docs/angular-ui-kit/quickstart.mdx
+++ b/docs/angular-ui-kit/quickstart.mdx
@@ -37,15 +37,15 @@ you need to pass to the UI Kit components.
 You can install the package using npm or Yarn.
 
 ```bash npm2yarn
-npm install @ProductDBsdk/angular-ui-kit @ProductDBsdk/web-core
+npm install @dytesdk/angular-ui-kit @dytesdk/web-core
 ```
 
 ### Version
 
 |                         |                                                                                                                              |
 | ----------------------- | ---------------------------------------------------------------------------------------------------------------------------- |
-| @ProductDBsdk/angular-ui-kit | [![npm version](https://badge.fury.io/js/@ProductDBsdk%2Fangular-ui-kit.svg)](https://badge.fury.io/js/@ProductDBsdk%2Fangular-ui-kit) |
-| @ProductDBsdk/web-core       | [![npm version](https://badge.fury.io/js/@ProductDBsdk%2Fweb-core.svg)](https://badge.fury.io/js/@ProductDBsdk%2Fweb-core)             |
+| @dytesdk/angular-ui-kit | [![npm version](https://badge.fury.io/js/@dytesdk%2Fangular-ui-kit.svg)](https://badge.fury.io/js/@dytesdk%2Fangular-ui-kit) |
+| @dytesdk/web-core       | [![npm version](https://badge.fury.io/js/@dytesdk%2Fweb-core.svg)](https://badge.fury.io/js/@dytesdk%2Fweb-core)             |
 
 ## Step 2: Load `ProductDBComponentsModule`
 
@@ -59,7 +59,7 @@ more information on the components, see
 ```ts
 import { NgModule } from '@angular/core';
 import { BrowserModule } from '@angular/platform-browser';
-import { ProductDBComponentsModule } from '@ProductDBsdk/angular-ui-kit';
+import { ProductDBComponentsModule } from '@dytesdk/angular-ui-kit';
 
 import { AppComponent } from './app.component';
 
