--- a/docs/cli/installation.mdx
+++ b/docs/cli/installation.mdx
@@ -16,7 +16,7 @@ organization(s) directly from your command line.
 You can install the CLI from the NPM registry using `npm` or `yarn`.
 
 ```bash npm2yarn
-npm install -g @ProductDBsdk/cli
+npm install -g @dytesdk/cli
 ```
 
 <head>
