--- a/docs/community-packages/device-emulator/intro.mdx
+++ b/docs/community-packages/device-emulator/intro.mdx
@@ -31,20 +31,20 @@ the `<head />` tag.
     // use device emulator methods here...
   });
 </script>
-<script src="https://cdn.jsdelivr.net/npm/@ProductDBsdk/device-emulator/dist/index.iife.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@dytesdk/device-emulator/dist/index.iife.js"></script>
 ```
 
   </TabItem>
   <TabItem value="npm" label="npm">
 
 ```bash
-npm install @ProductDBsdk/device-emulator
+npm install @dytesdk/device-emulator
 ```
 
 use the package like below
 
 ```js
-import '@ProductDBsdk/device-emulator';
+import '@dytesdk/device-emulator';
 
 // use the device emulator methods
 ```
@@ -54,13 +54,13 @@ import '@ProductDBsdk/device-emulator';
   <TabItem value="yarn" label="yarn">
 
 ```bash
-yarn add @ProductDBsdk/device-emulator
+yarn add @dytesdk/device-emulator
 ```
 
 use the package like below
 
 ```js
-import '@ProductDBsdk/device-emulator';
+import '@dytesdk/device-emulator';
 
 // use the device emulator methods
 ```
