--- a/docs/guides/capabilities/audio/transcriptionAWS.mdx
+++ b/docs/guides/capabilities/audio/transcriptionAWS.mdx
@@ -61,7 +61,7 @@ The HTTP endpoint where this server is accessible will now be called `backend_ur
 ### 3.1 Installation
 
 ```
-npm install @ProductDBsdk/aws-transcribe
+npm install @dytesdk/aws-transcribe
 ```
 
 Source available at (ProductDB-io/aws-transcribe)(https://github.com/ProductDB-io/aws-transcribe/tree/main/client)
@@ -73,7 +73,7 @@ The second step is to look for the place in your codebase where you are initiati
 Once you have found the place and got a hold of the meeting object. Add the following code on top of the file to import the FE SDK.
 
 ```
-import ProductDBAWSTranscribe from '@ProductDBsdk/aws-transcribe';
+import ProductDBAWSTranscribe from '@dytesdk/aws-transcribe';
 ```
 
 Add the following code just after the point where you have access to the meeting object.
