--- a/docs/guides/capabilities/breakoutroom/integrating-breakout-rooms.mdx
+++ b/docs/guides/capabilities/breakoutroom/integrating-breakout-rooms.mdx
@@ -24,20 +24,20 @@ You can install the package using CDN, npm or Yarn.
 Install the SDK using npm.
 
 ```shell
-npm install @ProductDBsdk/web-core
+npm install @dytesdk/web-core
 ```
 
-[![npm version](https://badge.fury.io/js/@ProductDBsdk%2Fweb-core.svg)](https://badge.fury.io/js/@ProductDBsdk%2Fweb-core)
+[![npm version](https://badge.fury.io/js/@dytesdk%2Fweb-core.svg)](https://badge.fury.io/js/@dytesdk%2Fweb-core)
 
   </TabItem>
   <TabItem value="yarn">
 Install the SDK using yarn.
 
 ```shell
-yarn add @ProductDBsdk/web-core
+yarn add @dytesdk/web-core
 ```
 
-[![npm version](https://badge.fury.io/js/@ProductDBsdk%2Fweb-core.svg)](https://badge.fury.io/js/@ProductDBsdk%2Fweb-core)
+[![npm version](https://badge.fury.io/js/@dytesdk%2Fweb-core.svg)](https://badge.fury.io/js/@dytesdk%2Fweb-core)
 
   </TabItem>
   <TabItem value="CDN">
