--- a/docs/guides/capabilities/recording/advanced/create-record-app-using-sdks.mdx
+++ b/docs/guides/capabilities/recording/advanced/create-record-app-using-sdks.mdx
@@ -73,13 +73,13 @@ Perform the following steps to create the recording app for your ProductDB meeti
 ### Step 1: Install the SDK
 
 ```js
-npm i @ProductDBsdk/recording-sdk
+npm i @dytesdk/recording-sdk
 ```
 
 ### Step 2: Import the `ProductDBRecording` object
 
 ```js
-import { ProductDBRecording } from '@ProductDBsdk/recording-sdk';
+import { ProductDBRecording } from '@dytesdk/recording-sdk';
 ```
 
 ### Step 3: Create the `ProductDBRecording` object
