--- a/docs/guides/capabilities/screensharing/displaying.mdx
+++ b/docs/guides/capabilities/screensharing/displaying.mdx
@@ -150,7 +150,7 @@ import {
   ProductDBScreenshareView,
   ProductDBNameTag,
   ProductDBAudioVisualizer,
-} from '@ProductDBsdk/react-ui-kit';
+} from '@dytesdk/react-ui-kit';
 
 <ProductDBScreenshareView participant={ssParticipant} style={{ height: '480px' }}>
   <ProductDBNameTag participant={ssParticipant}>
@@ -200,7 +200,7 @@ import {
   ProductDBScreenshareView,
   ProductDBNameTag,
   ProductDBAudioVisualizer,
-} from '@ProductDBsdk/react-native-ui-kit';
+} from '@dytesdk/react-native-ui-kit';
 
 <ProductDBScreenshareView participant={ssParticipant} style={{ height: '480px' }}>
   <ProductDBNameTag participant={ssParticipant}>
