--- a/docs/guides/capabilities/screensharing/enabling.mdx
+++ b/docs/guides/capabilities/screensharing/enabling.mdx
@@ -193,7 +193,7 @@ If you don't want to create your own button to toggle screen sharing, use the de
 <TabItem value="react" label="React">
 
 ```jsx
-import { ProductDBScreenShareToggle } from '@ProductDBsdk/react-ui-kit';
+import { ProductDBScreenShareToggle } from '@dytesdk/react-ui-kit';
 
 <Center>
   <ProductDBScreenShareToggle size="sm" meeting={meeting} />
@@ -218,7 +218,7 @@ import { ProductDBScreenShareToggle } from '@ProductDBsdk/react-ui-kit';
 <TabItem value="react-native" label="React Native">
 
 ```jsx
-import { ProductDBScreenShareToggle } from '@ProductDBsdk/react-native-ui-kit';
+import { ProductDBScreenShareToggle } from '@dytesdk/react-native-ui-kit';
 
 <Center>
   <ProductDBScreenShareToggle size="sm" meeting={meeting} />
