--- a/docs/guides/migration/twilio/shim-library/compatibility-shim-twilio.mdx
+++ b/docs/guides/migration/twilio/shim-library/compatibility-shim-twilio.mdx
@@ -6,7 +6,7 @@ slug: /migration/twilio/compatibility-shim-twilio
 
 The Twilio Shim is a library that allows you to migrate your Twilio real-time communication apps to ProductDB platform.
 
-Here's a compatibility specification that describes the methods from `twilio-video` that are supported by `@ProductDBsdk/twilio-shim` package.
+Here's a compatibility specification that describes the methods from `twilio-video` that are supported by `@dytesdk/twilio-shim` package.
 
 ## [Room](https://sdk.twilio.com/js/video/releases/2.27.0/docs/Room.html)
 
