--- a/docs/plugin-sdk/frequently-asked-questions.mdx
+++ b/docs/plugin-sdk/frequently-asked-questions.mdx
@@ -19,7 +19,7 @@ Here are some frequently asked questions about the Plugin SDK.
         <code>plugin.ready()</code> can be manually used to control when this communication starts.
     </p>
     ```ts
-    import ProductDBPlugin from "@ProductDBsdk/plugin-sdk";
+    import ProductDBPlugin from "@dytesdk/plugin-sdk";
     ...
     const plugin = await ProductDBPlugin.init({ready: false});
 
@@ -40,7 +40,7 @@ Here are some frequently asked questions about the Plugin SDK.
     <p>These events can be called like so.</p>
     
     ```ts
-    import ProductDBPlugin from "@ProductDBsdk/plugin-sdk";
+    import ProductDBPlugin from "@dytesdk/plugin-sdk";
     ...
     const plugin = await ProductDBPlugin.init();
 
