--- a/docs/plugin-sdk/guides/exchange-data-between-plugin-and-meeting.mdx
+++ b/docs/plugin-sdk/guides/exchange-data-between-plugin-and-meeting.mdx
@@ -53,7 +53,7 @@ plugin.on('myAwesomeEvent', (data) => {
 The emitEvent method is used to emit custom events to the (client SDK) room.
 
 ```ts
-import ProductDBPlugin from "@ProductDBsdk/plugin-sdk";
+import ProductDBPlugin from "@dytesdk/plugin-sdk";
 
 const plugin = ProductDBPlugin.init();
 
@@ -63,7 +63,7 @@ plugin.room.emitEvent('myAwesomeEvent', {...});
 ### Listen for custom messages from the ProductDB meeting
 
 ```ts
-import ProductDBPlugin from '@ProductDBsdk/plugin-sdk';
+import ProductDBPlugin from '@dytesdk/plugin-sdk';
 
 const plugin = ProductDBPlugin.init();
 
