--- a/docs/plugin-sdk/quickstart.mdx
+++ b/docs/plugin-sdk/quickstart.mdx
@@ -127,21 +127,21 @@ import TabItem from '@theme/TabItem';
   <TabItem value="npm">
 
 ```shell
-npm install @ProductDBsdk/plugin-sdk
+npm install @dytesdk/plugin-sdk
 ```
 
   </TabItem>
   <TabItem value="yarn">
 
 ```shell
-yarn add @ProductDBsdk/plugin-sdk
+yarn add @dytesdk/plugin-sdk
 ```
 
   </TabItem>
   <TabItem value="CDN">
 
 ```html
-<script src="https://cdn.jsdelivr.net/npm/@ProductDBsdk/plugin-sdk" />
+<script src="https://cdn.jsdelivr.net/npm/@dytesdk/plugin-sdk" />
 ```
 
   </TabItem>
@@ -152,7 +152,7 @@ yarn add @ProductDBsdk/plugin-sdk
 This is a simple plugin that greets every new person who joins the meeting.
 
 ```ts
-import ProductDBPlugin from '@ProductDBsdk/plugin-sdk';
+import ProductDBPlugin from '@dytesdk/plugin-sdk';
 
 const plugin = ProductDBPlugin.init();
 await plugin.stores.populate('storeName');
