--- a/docs/plugin-sdk/setup/develop.mdx
+++ b/docs/plugin-sdk/setup/develop.mdx
@@ -35,7 +35,7 @@ meeting.
 
 :::info before you start
 
-Install `@ProductDBsdk/web-core@1.x.x` or higher to use dev tools.
+Install `@dytesdk/web-core@1.x.x` or higher to use dev tools.
 
 :::
 
@@ -77,13 +77,13 @@ you. In this case `localhost:5000`.
 
 :::info before you start
 
-Install `@ProductDBsdk/react-web-core@1.x.x` or higher to use dev tools.
+Install `@dytesdk/react-web-core@1.x.x` or higher to use dev tools.
 
 :::
 
 ```ts
-import { useProductDBClient } from '@ProductDBsdk/react-web-core';
-import { ProductDBMeeting } from '@ProductDBsdk/react-ui-kit';
+import { useProductDBClient } from '@dytesdk/react-web-core';
+import { ProductDBMeeting } from '@dytesdk/react-ui-kit';
 
 export default function App() {
   const [meeting, initMeeting] = useProductDBClient();
@@ -117,7 +117,7 @@ you. In this case `localhost:5000`.
 
 :::info before you start
 
-Install `@ProductDBsdk/web-core@0.10.x` or higher to use dev tools.
+Install `@dytesdk/web-core@0.10.x` or higher to use dev tools.
 
 :::
 
