--- a/docs/plugin-sdk/usage/basic/initialize.mdx
+++ b/docs/plugin-sdk/usage/basic/initialize.mdx
@@ -31,7 +31,7 @@ The following is the schema for the `config` object :
 | ready     | boolean  | `true` when the plugin initialization has completed. | `true`                     | false        |
 
 ```jsx
-import ProductDBPlugin from "@ProductDBsdk/plugin-sdk";
+import ProductDBPlugin from "@dytesdk/plugin-sdk";
 ...
 const plugin = ProductDBPlugin.init();
 await plugin.stores.populate('storeName');
