--- a/docs/plugin-sdk/usage/installation.mdx
+++ b/docs/plugin-sdk/usage/installation.mdx
@@ -33,21 +33,21 @@ import TabItem from '@theme/TabItem';
   <TabItem value="npm">
 
 ```shell
-npm install @ProductDBsdk/plugin-sdk
+npm install @dytesdk/plugin-sdk
 ```
 
   </TabItem>
   <TabItem value="yarn">
 
 ```shell
-yarn add @ProductDBsdk/plugin-sdk
+yarn add @dytesdk/plugin-sdk
 ```
 
   </TabItem>
   <TabItem value="CDN">
 
 ```html
-<script src="https://cdn.jsdelivr.net/npm/@ProductDBsdk/plugin-sdk" />
+<script src="https://cdn.jsdelivr.net/npm/@dytesdk/plugin-sdk" />
 ```
 
   </TabItem>
