--- a/docs/react-native/quickstart.mdx
+++ b/docs/react-native/quickstart.mdx
@@ -22,7 +22,7 @@ You can initialize a meeting in your React Native app, using this component,
 like below.
 
 ```jsx
-import { ProductDBMeeting } from '@ProductDBsdk/mobile';
+import { ProductDBMeeting } from '@dytesdk/mobile';
 
 function App() {
   return (
