--- a/docs/react-ui-kit/build-in-call-ui/build-your-own/customize-control-bar.mdx
+++ b/docs/react-ui-kit/build-in-call-ui/build-your-own/customize-control-bar.mdx
@@ -19,8 +19,8 @@ import CodeRunner from '@site/src/components/CodeRunner/CodeRunner';
 hide={[{start:1, end: 5}, {start:44, end: 241}]}
 highlight={[{start:6, end: 42}]}
 file={`
-import { defaultConfig, generateConfig, ProductDBBreakoutRoomsToggle, ProductDBCameraToggle, ProductDBChatToggle, ProductDBControlbar, ProductDBControlbarButton, ProductDBDebuggerToggle, ProductDBFullscreenToggle, ProductDBLeaveButton, ProductDBMicToggle, ProductDBMoreToggle, ProductDBMuteAllButton, ProductDBParticipantsToggle, ProductDBPipToggle, ProductDBPluginsToggle, ProductDBPoll, ProductDBPollsToggle, ProductDBRecordingToggle, ProductDBScreenShareToggle, ProductDBSettingsToggle, ProductDBStageToggle } from '@ProductDBsdk/react-ui-kit';
-import { useProductDBMeeting, useProductDBSelector } from '@ProductDBsdk/react-web-core';
+import { defaultConfig, generateConfig, ProductDBBreakoutRoomsToggle, ProductDBCameraToggle, ProductDBChatToggle, ProductDBControlbar, ProductDBControlbarButton, ProductDBDebuggerToggle, ProductDBFullscreenToggle, ProductDBLeaveButton, ProductDBMicToggle, ProductDBMoreToggle, ProductDBMuteAllButton, ProductDBParticipantsToggle, ProductDBPipToggle, ProductDBPluginsToggle, ProductDBPoll, ProductDBPollsToggle, ProductDBRecordingToggle, ProductDBScreenShareToggle, ProductDBSettingsToggle, ProductDBStageToggle } from '@dytesdk/react-ui-kit';
+import { useProductDBMeeting, useProductDBSelector } from '@dytesdk/react-web-core';
 import { useEffect, useState } from 'react';
 
 function ControlBarWithCustomUI({
