--- a/docs/react-ui-kit/build-in-call-ui/build-your-own/customize-header.mdx
+++ b/docs/react-ui-kit/build-in-call-ui/build-your-own/customize-header.mdx
@@ -19,8 +19,8 @@ import CodeRunner from '@site/src/components/CodeRunner/CodeRunner';
 hide={[{start:1, end: 5}, {start:29, end: 227}]}
 highlight={[{start:6, end: 27}]}
 file={`
-import { defaultConfig, generateConfig, ProductDBLogo, ProductDBRecordingIndicator, ProductDBLivestreamIndicator, ProductDBMeetingTitle, ProductDBGridPagination, ProductDBParticipantCount, ProductDBViewerCount, ProductDBClock } from '@ProductDBsdk/react-ui-kit';
-import { useProductDBMeeting, useProductDBSelector } from '@ProductDBsdk/react-web-core';
+import { defaultConfig, generateConfig, ProductDBLogo, ProductDBRecordingIndicator, ProductDBLivestreamIndicator, ProductDBMeetingTitle, ProductDBGridPagination, ProductDBParticipantCount, ProductDBViewerCount, ProductDBClock } from '@dytesdk/react-ui-kit';
+import { useProductDBMeeting, useProductDBSelector } from '@dytesdk/react-web-core';
 import { useEffect, useState } from 'react';
 
 function HeaderWithCustomUI({
