--- a/docs/react-ui-kit/build-in-call-ui/build-your-own/handling-states-and-configs.mdx
+++ b/docs/react-ui-kit/build-in-call-ui/build-your-own/handling-states-and-configs.mdx
@@ -25,8 +25,8 @@ import CodeRunner from '@site/src/components/CodeRunner/CodeRunner';
 hide={[{start:1, end: 5}]}
 highlight={[{start:9, end: 16}, {start:20, end: 30}, {start:32, end: 37}, {start:40, end: 40}, {start:57, end: 64}]}
 file={`
-import { defaultConfig, generateConfig } from '@ProductDBsdk/react-ui-kit';
-import { useProductDBMeeting, useProductDBSelector } from '@ProductDBsdk/react-web-core';
+import { defaultConfig, generateConfig } from '@dytesdk/react-ui-kit';
+import { useProductDBMeeting, useProductDBSelector } from '@dytesdk/react-web-core';
 import { useEffect, useState } from 'react';
 
 export default function Meeting() {
