--- a/docs/react-ui-kit/build-in-call-ui/build-your-own/states based UI Split.mdx
+++ b/docs/react-ui-kit/build-in-call-ui/build-your-own/states based UI Split.mdx
@@ -15,8 +15,8 @@ import CodeRunner from '@site/src/components/CodeRunner/CodeRunner';
 hide={[{start:1, end: 5}, {start:28, end: 224}]}
 highlight={[{start:6, end: 26}]}
 file={`
-import { defaultConfig, generateConfig } from '@ProductDBsdk/react-ui-kit';
-import { useProductDBMeeting, useProductDBSelector } from '@ProductDBsdk/react-web-core';
+import { defaultConfig, generateConfig } from '@dytesdk/react-ui-kit';
+import { useProductDBMeeting, useProductDBSelector } from '@dytesdk/react-web-core';
 import { useEffect, useState } from 'react';
 
 function CustomProductDBMeeting({ meeting, config, states, setStates }: { meeting: ProductDBClient, config: UIConfig,  states: CustomStates, setStates: SetStates}){
