--- a/docs/react-ui-kit/build-pre-call-ui/build-your-own/add-audio-video-preview.mdx
+++ b/docs/react-ui-kit/build-pre-call-ui/build-your-own/add-audio-video-preview.mdx
@@ -39,8 +39,8 @@ file={`
 import {
   ProductDBParticipantTile, ProductDBAvatar,ProductDBNameTag,
   ProductDBAudioVisualizer, ProductDBMicToggle, ProductDBCameraToggle, ProductDBButton,
-} from '@ProductDBsdk/react-ui-kit';
-import { useProductDBMeeting } from '@ProductDBsdk/react-web-core';
+} from '@dytesdk/react-ui-kit';
+import { useProductDBMeeting } from '@dytesdk/react-web-core';
 
 export default function CustomMeetingPreview() {
   const { meeting } = useProductDBMeeting();
