--- a/docs/react-ui-kit/build-pre-call-ui/default-setup-screen.mdx
+++ b/docs/react-ui-kit/build-pre-call-ui/default-setup-screen.mdx
@@ -19,8 +19,8 @@ import CodeRunner from '@site/src/components/CodeRunner/CodeRunner';
 highlight={[{start: 11, end: 11}]}
 hide={[{start:1, end: 3}]}
 file={`
-import { ProductDBSetupScreen } from '@ProductDBsdk/react-ui-kit';
-import { useProductDBMeeting, useProductDBSelector } from '@ProductDBsdk/react-web-core';
+import { ProductDBSetupScreen } from '@dytesdk/react-ui-kit';
+import { useProductDBMeeting, useProductDBSelector } from '@dytesdk/react-web-core';
 
 export default function MyMeeting() {
   const { meeting } = useProductDBMeeting();
