--- a/docs/react-ui-kit/components/dyte-participant-tile.mdx
+++ b/docs/react-ui-kit/components/dyte-participant-tile.mdx
@@ -16,8 +16,8 @@ of components like `ProductDB-name-tag`, `ProductDB-audio-visualizer` or any oth
 hide={[{start:1, end: 3}]}
 minHeight='300px'
 file={`
-import { ProductDBParticipantTile, ProductDBNameTag, ProductDBAudioVisualizer } from "@ProductDBsdk/react-ui-kit";
-import { useProductDBMeeting } from "@ProductDBsdk/react-web-core";
+import { ProductDBParticipantTile, ProductDBNameTag, ProductDBAudioVisualizer } from "@dytesdk/react-ui-kit";
+import { useProductDBMeeting } from "@dytesdk/react-web-core";
 
 export default function MyMeetingUI() {
   const { meeting } = useProductDBMeeting();
@@ -46,8 +46,8 @@ additionalDecorators={[{
   }]}
 minHeight='300px'
 file={`
-import { ProductDBParticipantTile, ProductDBNameTag, ProductDBAudioVisualizer } from "@ProductDBsdk/react-ui-kit";
-import { useProductDBMeeting } from "@ProductDBsdk/react-web-core";
+import { ProductDBParticipantTile, ProductDBNameTag, ProductDBAudioVisualizer } from "@dytesdk/react-ui-kit";
+import { useProductDBMeeting } from "@dytesdk/react-web-core";
 
 export default function MyMeetingUI() {
   const { meeting } = useProductDBMeeting();
@@ -68,8 +68,8 @@ hide={[{start:1, end: 3}]}
 highlight={[{start:12, end: 12}]}
 minHeight='300px'
 file={`
-import { ProductDBParticipantTile, ProductDBNameTag, ProductDBAudioVisualizer } from "@ProductDBsdk/react-ui-kit";
-import { useProductDBMeeting } from "@ProductDBsdk/react-web-core";
+import { ProductDBParticipantTile, ProductDBNameTag, ProductDBAudioVisualizer } from "@dytesdk/react-ui-kit";
+import { useProductDBMeeting } from "@dytesdk/react-web-core";
 
 export default function MyMeetingUI() {
   const { meeting } = useProductDBMeeting();
