--- a/docs/rn-core/installation.mdx
+++ b/docs/rn-core/installation.mdx
@@ -26,7 +26,7 @@ import TabItem from '@theme/TabItem';
 Install the SDK using npm.
 
 ```shell
-npm install @ProductDBsdk/react-native-core @ProductDBinternals/react-native-webrtc
+npm install @dytesdk/react-native-core @ProductDBinternals/react-native-webrtc
 ```
 
   </TabItem>
@@ -34,13 +34,13 @@ npm install @ProductDBsdk/react-native-core @ProductDBinternals/react-native-web
 Install the SDK using yarn.
 
 ```shell
-yarn add @ProductDBsdk/react-native-core @ProductDBinternals/react-native-webrtc
+yarn add @dytesdk/react-native-core @ProductDBinternals/react-native-webrtc
 ```
 
   </TabItem>
 </Tabs>
 
-[![npm version](https://badge.fury.io/js/@ProductDBsdk%2Freact-native-core.svg)](https://badge.fury.io/js/@ProductDBsdk%2Freact-native-core)
+[![npm version](https://badge.fury.io/js/@dytesdk%2Freact-native-core.svg)](https://badge.fury.io/js/@dytesdk%2Freact-native-core)
 
 <Tabs
   groupId="mobile-pm"
