--- a/docs/guides/migration/opentok/opentok-shim-by-dyte.mdx
+++ b/docs/guides/migration/opentok/opentok-shim-by-dyte.mdx
@@ -9,7 +9,7 @@ description: >-
 The OpenTok [Shim](<https://en.wikipedia.org/wiki/Shim_(computing)>) by ProductDB is a package that allows you to migrate your video calling applications from [OpenTok](https://tokbox.com/developer/) to ProductDB infrastructure.
 
 - ProductDB provides a set of shim libraries that serve as seamless replacements for the Vonage video APIs (previously known as Tokbox OpenTok). These shims serve as a fundamental building block for migrating your application from OpenTok to ProductDB infrastructure.
-- The `@ProductDBsdk/opentok-shim` package serves as a wrapper over the ProductDB SDK with an external API that is fully compatible with Opentok JS. As a drop-in replacement for Opentok JS, it can handle most of the methods and events that are present in the original library.
+- The `@dytesdk/opentok-shim` package serves as a wrapper over the ProductDB SDK with an external API that is fully compatible with Opentok JS. As a drop-in replacement for Opentok JS, it can handle most of the methods and events that are present in the original library.
 
 Please [contact us](https://productdb.io/contact) for any help or support with the migration.
 
@@ -20,18 +20,18 @@ To get started with the ProductDB Shim for OpenTok, do the following:
 1. Install the shim from the NPM registry using the following command:
 
 ```bash npm
-npm install @ProductDBsdk/opentok-shim
+npm install @dytesdk/opentok-shim
 ```
 
 2. Once you have installed the package, you can use it in your project by importing it using the following statement:
 
 ```bash
-import * as OT from "@ProductDBsdk/opentok-shim";
+import * as OT from "@dytesdk/opentok-shim";
 ```
 
 ## Usage
 
-The `@ProductDBsdk/opentok-shim` shares the same API as the OpenTok video SDK. You can use most of the methods that are supported by it.
+The `@dytesdk/opentok-shim` shares the same API as the OpenTok video SDK. You can use most of the methods that are supported by it.
 
 Here are a few examples.
 
