--- a/docs/partials/_angular-quickstart.mdx
+++ b/docs/partials/_angular-quickstart.mdx
@@ -29,21 +29,21 @@ Make sure you've a mechanism to get `authToken` from your server-side, which you
 
 To begin, install the following packages:
 
-- `@ProductDBsdk/web-core`: This core package powers video, voice, livestream and chat SDKs. This is a required package.
-- `@ProductDBsdk/ui-kit`: This package includes ProductDB UI components which can be used with core to easily build your own UI, including a prebuilt UI component. You can skip installing this package if you wish to build your own UI from scratch.
+- `@dytesdk/web-core`: This core package powers video, voice, livestream and chat SDKs. This is a required package.
+- `@dytesdk/ui-kit`: This package includes ProductDB UI components which can be used with core to easily build your own UI, including a prebuilt UI component. You can skip installing this package if you wish to build your own UI from scratch.
 
 You can install the SDKs using CDN, npm, or Yarn.
 
 ```bash npm2yarn
-npm install @ProductDBsdk/angular-ui-kit @ProductDBsdk/web-core
+npm install @dytesdk/angular-ui-kit @dytesdk/web-core
 ```
 
 ### Version
 
 |                   |                                                                                                                  |
 | ----------------- | ---------------------------------------------------------------------------------------------------------------- |
-| @ProductDBsdk/web-core | [![npm version](https://badge.fury.io/js/@ProductDBsdk%2Fweb-core.svg)](https://badge.fury.io/js/@ProductDBsdk%2Fweb-core) |
-| @ProductDBsdk/ui-kit   | [![npm version](https://badge.fury.io/js/@ProductDBsdk%2Fui-kit.svg)](https://badge.fury.io/js/@ProductDBsdk%2Fui-kit)     |
+| @dytesdk/web-core | [![npm version](https://badge.fury.io/js/@dytesdk%2Fweb-core.svg)](https://badge.fury.io/js/@dytesdk%2Fweb-core) |
+| @dytesdk/ui-kit   | [![npm version](https://badge.fury.io/js/@dytesdk%2Fui-kit.svg)](https://badge.fury.io/js/@dytesdk%2Fui-kit)     |
 
 ## Step 2: Prepare meeting object
 
@@ -86,7 +86,7 @@ more information on the components, see
 ```ts {3,8}
 import { NgModule } from '@angular/core';
 import { BrowserModule } from '@angular/platform-browser';
-import { ProductDBComponentsModule } from '@ProductDBsdk/angular-ui-kit';
+import { ProductDBComponentsModule } from '@dytesdk/angular-ui-kit';
 import { AppComponent } from './app.component';
 
 @NgModule({
