--- a/docs/partials/_html-quickstart.mdx
+++ b/docs/partials/_html-quickstart.mdx
@@ -28,8 +28,8 @@ Make sure you've a mechanism to get authToken from your server-side, which you w
 
 To begin, install the following packages:
 
-- `@ProductDBsdk/web-core`: This core package powers video, voice, livestream and chat SDKs. This is a required package.
-- `@ProductDBsdk/ui-kit`: This package includes ProductDB UI components which can be used with core to easily build your own UI, including a prebuilt UI component. You can skip installing this package if you wish to build your own UI from scratch.
+- `@dytesdk/web-core`: This core package powers video, voice, livestream and chat SDKs. This is a required package.
+- `@dytesdk/ui-kit`: This package includes ProductDB UI components which can be used with core to easily build your own UI, including a prebuilt UI component. You can skip installing this package if you wish to build your own UI from scratch.
 
 You can install the SDKs using CDN, npm, or Yarn.
 
@@ -47,13 +47,13 @@ You can also import utilities or any other export from CDN:
   </TabItem>
   <TabItem value="npm" label="npm">
 ```bash
-npm install @ProductDBsdk/web-core @ProductDBsdk/ui-kit
+npm install @dytesdk/web-core @dytesdk/ui-kit
 ```
   </TabItem>
 
   <TabItem value="yarn" label="yarn">
 ```bash
-yarn add @ProductDBsdk/web-core @ProductDBsdk/ui-kit
+yarn add @dytesdk/web-core @dytesdk/ui-kit
 ```
   </TabItem>
 </Tabs>
@@ -62,8 +62,8 @@ yarn add @ProductDBsdk/web-core @ProductDBsdk/ui-kit
 
 |                   |                                                                                                                  |
 | ----------------- | ---------------------------------------------------------------------------------------------------------------- |
-| @ProductDBsdk/web-core | [![npm version](https://badge.fury.io/js/@ProductDBsdk%2Fweb-core.svg)](https://badge.fury.io/js/@ProductDBsdk%2Fweb-core) |
-| @ProductDBsdk/ui-kit   | [![npm version](https://badge.fury.io/js/@ProductDBsdk%2Fui-kit.svg)](https://badge.fury.io/js/@ProductDBsdk%2Fui-kit)     |
+| @dytesdk/web-core | [![npm version](https://badge.fury.io/js/@dytesdk%2Fweb-core.svg)](https://badge.fury.io/js/@dytesdk%2Fweb-core) |
+| @dytesdk/ui-kit   | [![npm version](https://badge.fury.io/js/@dytesdk%2Fui-kit.svg)](https://badge.fury.io/js/@dytesdk%2Fui-kit)     |
 
 ## Step 2: Prepare meeting object
 
