--- a/docs/partials/_react-quickstart.mdx
+++ b/docs/partials/_react-quickstart.mdx
@@ -26,23 +26,23 @@ Make sure you've a mechanism to get `authToken` from your server-side, which you
 
 To begin, install the following packages:
 
-- `@ProductDBsdk/react-web-core`: This core package powers video, voice, livestream, and chat SDKs. This is a required package.
-- `@ProductDBsdk/ui-kit`: This package includes ProductDB UI components which can be used with core to easily build your own UI, including a prebuilt UI component. You can skip installing this package if you wish to build your own UI from scratch.
+- `@dytesdk/react-web-core`: This core package powers video, voice, livestream, and chat SDKs. This is a required package.
+- `@dytesdk/ui-kit`: This package includes ProductDB UI components which can be used with core to easily build your own UI, including a prebuilt UI component. You can skip installing this package if you wish to build your own UI from scratch.
 
-`@ProductDBsdk/react-web-core` consists of hooks written on top of our `@ProductDBsdk/web-core` package, which makes it easy to use [`web-core`](https://npmjs.com/package/@ProductDBsdk/web-core) in React applications.
+`@dytesdk/react-web-core` consists of hooks written on top of our `@dytesdk/web-core` package, which makes it easy to use [`web-core`](https://npmjs.com/package/@dytesdk/web-core) in React applications.
 
 You can install the package using npm or Yarn.
 
 ```bash npm2yarn
-npm install @ProductDBsdk/react-web-core @ProductDBsdk/react-ui-kit
+npm install @dytesdk/react-web-core @dytesdk/react-ui-kit
 ```
 
 ### Version
 
 |                         |                                                                                                                              |
 | ----------------------- | ---------------------------------------------------------------------------------------------------------------------------- |
-| @ProductDBsdk/react-web-core | [![npm version](https://badge.fury.io/js/@ProductDBsdk%2Freact-web-core.svg)](https://badge.fury.io/js/@ProductDBsdk%2Freact-web-core) |
-| @ProductDBsdk/react-ui-kit   | [![npm version](https://badge.fury.io/js/@ProductDBsdk%2Freact-ui-kit.svg)](https://badge.fury.io/js/@ProductDBsdk%2Freact-ui-kit)     |
+| @dytesdk/react-web-core | [![npm version](https://badge.fury.io/js/@dytesdk%2Freact-web-core.svg)](https://badge.fury.io/js/@dytesdk%2Freact-web-core) |
+| @dytesdk/react-ui-kit   | [![npm version](https://badge.fury.io/js/@dytesdk%2Freact-ui-kit.svg)](https://badge.fury.io/js/@dytesdk%2Freact-ui-kit)     |
 
 ## Step 2: Prepare meeting object
 
@@ -55,7 +55,7 @@ Here's a series of steps that you need to perform:
 
 ```jsx
 import { useEffect } from 'react';
-import { useProductDBClient } from '@ProductDBsdk/react-web-core';
+import { useProductDBClient } from '@dytesdk/react-web-core';
 
 export default function Meeting({ authToken }) {
   const [meeting, initMeeting] = useProductDBClient();
@@ -76,11 +76,11 @@ export default function Meeting({ authToken }) {
 
 ### Set up `ProductDBProvider`
 
-You need it to import the `ProductDBProvider` from the `@ProductDBsdk/react-web-core`. `ProductDBProvider` basically is a hook wrapper on `ProductDBsdk/web-core`. This provides a meeting object to child components.
+You need it to import the `ProductDBProvider` from the `@dytesdk/react-web-core`. `ProductDBProvider` basically is a hook wrapper on `dytesdk/web-core`. This provides a meeting object to child components.
 
 ```jsx {2,17-21}
 import { useEffect } from 'react';
-import { useProductDBClient, ProductDBProvider } from '@ProductDBsdk/react-web-core';
+import { useProductDBClient, ProductDBProvider } from '@dytesdk/react-web-core';
 
 export default function App() {
   const [meeting, initMeeting] = useProductDBClient();
@@ -115,7 +115,7 @@ Create a `MyMeeting` component and render it within `ProductDBProvider`.
 
 ```jsx {3,21}
 import { useEffect } from 'react';
-import { useProductDBClient, ProductDBProvider } from '@ProductDBsdk/react-web-core';
+import { useProductDBClient, ProductDBProvider } from '@dytesdk/react-web-core';
 import MyMeeting from './my-meeting';
 
 export default function App() {
@@ -149,7 +149,7 @@ states, dialogs, and other smaller bits of managing the application.
 For more information on the other props of `ProductDBMeeting`, see [ProductDBMeeting](/react-ui-kit/components/ProductDB-meeting).
 
 ```jsx
-import { ProductDBMeeting } from '@ProductDBsdk/react-ui-kit';
+import { ProductDBMeeting } from '@dytesdk/react-ui-kit';
 function MyMeeting() {
   const { meeting } = useProductDBMeeting();
 
@@ -166,7 +166,7 @@ function MyMeeting() {
 If you require additional customizations, you can choose specific components and utilize the low-level APIs offered by our [core SDK](/web-core/) to construct the rest of the UI according to your specific needs.
 
 ```jsx
-import { ProductDBGrid, ProductDBMicToggle } from '@ProductDBsdk/react-ui-kit';
+import { ProductDBGrid, ProductDBMicToggle } from '@dytesdk/react-ui-kit';
 
 function MyMeeting() {
   const { meeting } = useProductDBMeeting();
