--- a/docs/react-ui-kit/build-in-call-ui/default-meeting-ui.mdx
+++ b/docs/react-ui-kit/build-in-call-ui/default-meeting-ui.mdx
@@ -19,8 +19,8 @@ import CodeRunner from '@site/src/components/CodeRunner/CodeRunner';
 highlight={[{start: 14, end: 33}]}
 hide={[{start:1, end: 4}]}
 file={`
-import { ProductDBSetupScreen, ProductDBEndedScreen, ProductDBHeader, ProductDBParticipantsAudio, ProductDBDialogManager, ProductDBStage, ProductDBGrid, ProductDBNotifications, ProductDBSidebar, ProductDBControlbar } from '@ProductDBsdk/react-ui-kit';
-import { useProductDBMeeting, useProductDBSelector } from '@ProductDBsdk/react-web-core';
+import { ProductDBSetupScreen, ProductDBEndedScreen, ProductDBHeader, ProductDBParticipantsAudio, ProductDBDialogManager, ProductDBStage, ProductDBGrid, ProductDBNotifications, ProductDBSidebar, ProductDBControlbar } from '@dytesdk/react-ui-kit';
+import { useProductDBMeeting, useProductDBSelector } from '@dytesdk/react-web-core';
 import { useEffect } from 'react';
 
 export default function MyMeeting() {
