--- a/docs/react-ui-kit/build-pre-call-ui/build-your-own/edit-user-name.mdx
+++ b/docs/react-ui-kit/build-pre-call-ui/build-your-own/edit-user-name.mdx
@@ -27,8 +27,8 @@ At the end, we let user join the meeting using `await meeting.join();`.
 highlight={[{start: 8, end:8}, {start: 29, end: 30}, {start: 44, end:44}]}
 hide={[{start: 1, end: 4}]}
 file={`
-import { useProductDBMeeting, useProductDBSelector } from "@ProductDBsdk/react-web-core";
-import { ProductDBButton } from "@ProductDBsdk/react-ui-kit";
+import { useProductDBMeeting, useProductDBSelector } from "@dytesdk/react-web-core";
+import { ProductDBButton } from "@dytesdk/react-ui-kit";
 import { useState, useEffect } from "react";
 
 export default function CustomMeetingPreview() {
