--- a/docs/react-web-core/quickstart.mdx
+++ b/docs/react-web-core/quickstart.mdx
@@ -5,24 +5,24 @@ sidebar_position: 1
 
 # Quickstart
 
-This quickstart shows how to incorporate live video and audio into your React application using Dyte's Core SDKs. Core SDKs offer comprehensive customization and branding capabilities, enabling you to create your own user interface (UI) from scratch, without having to deal with complex media layers.
+This quickstart shows how to incorporate live video and audio into your React application using ProductDB's Core SDKs. Core SDKs offer comprehensive customization and branding capabilities, enabling you to create your own user interface (UI) from scratch, without having to deal with complex media layers.
 
 ## Objective
 
 You'll learn how to:
 
-- Install the Dyte SDK
-- Initialize Dyte Client
+- Install the ProductDB SDK
+- Initialize ProductDB Client
 - Connect to the meeting
 - Go live!
 
 ## Before Getting Started
 
-Make sure you've read the [Getting Started with Dyte](/getting-started) topic
+Make sure you've read the [Getting Started with ProductDB](/getting-started) topic
 and completed the following steps:
 
-- Create a [Dyte Developer Account](https://dev.productdb.io/)
-- Create a [Dyte Meeting](/api/?v=v2#/operations/create_meeting)
+- Create a [ProductDB Developer Account](https://dev.productdb.io/)
+- Create a [ProductDB Meeting](/api/?v=v2#/operations/create_meeting)
 - [Add Participant](/api/?v=v2#/operations/add_participant) to the meeting
 
 ## Step 1: Install the SDK
@@ -37,24 +37,24 @@ npm install @dytesdk/react-web-core
 
 ## Step 2: Initialize the SDK
 
-To start, we need to initialize the libraries and wrap the application in the `<DyteProvider />` component. Import the `DyteProvider` from the `dytesdk/react-web-core`.
+To start, we need to initialize the libraries and wrap the application in the `<ProductDBProvider />` component. Import the `ProductDBProvider` from the `dytesdk/react-web-core`.
 
-The `<DyteProvider />` provides the necessary context for the various hooks to consume the `meeting` object as per their purpose. Dyte provides the following built-in hooks for your usage:
+The `<ProductDBProvider />` provides the necessary context for the various hooks to consume the `meeting` object as per their purpose. ProductDB provides the following built-in hooks for your usage:
 
-- `useDyteClient()`
-- `useDyteMeeting()`
-- `useDyteSelector()`
+- `useProductDBClient()`
+- `useProductDBMeeting()`
+- `useProductDBSelector()`
 
 For more information on hooks, see [Use Web Core Hooks](/react-ui-kit/using-hooks).
 
 To initialize, call the `init()` method and pass the `authToken`. You can get the `authToken` using the [Add Participant API](/api#/operations/add_participant).
 
 ```jsx
-import { DyteProvider, useDyteClient } from '@dytesdk/react-web-core';
+import { ProductDBProvider, useProductDBClient } from '@dytesdk/react-web-core';
 import { useEffect } from 'react';
 
 export default function App() {
-  const [meeting, initMeeting] = useDyteClient();
+  const [meeting, initMeeting] = useProductDBClient();
 
   useEffect(() => {
     initMeeting({
@@ -67,27 +67,27 @@ export default function App() {
   }, []);
 
   return (
-    <DyteProvider value={meeting}>
-      {/* Render your UI here. Subcomponents can now use the `useDyteMeeting` and `useDyteSelector` hooks */}
-    </DyteProvider>
+    <ProductDBProvider value={meeting}>
+      {/* Render your UI here. Subcomponents can now use the `useProductDBMeeting` and `useProductDBSelector` hooks */}
+    </ProductDBProvider>
   );
 }
 ```
 
-You can now use the `useDyteMeeting` and `useDyteSelector` hooks as required.
+You can now use the `useProductDBMeeting` and `useProductDBSelector` hooks as required.
 
 ## Step 3: Connect to the Meeting
 
-Now, you have established the connection with the Dyte meeting server successfully. Next step is to join the room and leave the room once the meeting is over.
+Now, you have established the connection with the ProductDB meeting server successfully. Next step is to join the room and leave the room once the meeting is over.
 
 ```jsx
-import { useDyteMeeting, useDyteSelector } from '@dytesdk/react-web-core';
+import { useProductDBMeeting, useProductDBSelector } from '@dytesdk/react-web-core';
 import { useEffect } from 'react';
 import Room from './Room';
 
 export default function AudioRoom() {
-  const { meeting } = useDyteMeeting();
-  const roomJoined = useDyteSelector((meeting) => meeting.self.roomJoined);
+  const { meeting } = useProductDBMeeting();
+  const roomJoined = useProductDBSelector((meeting) => meeting.self.roomJoined);
 
   useEffect(() => {
     meeting.self.on('roomLeft', () => {
@@ -103,16 +103,16 @@ export default function AudioRoom() {
 ## Example
 
 ```jsx
-import { useDyteMeeting, useDyteSelector } from '@dytesdk/react-web-core';
+import { useProductDBMeeting, useProductDBSelector } from '@dytesdk/react-web-core';
 
 const Meeting = () => {
   // in case you want to use the whole meeting object
-  const { meeting } = useDyteMeeting();
+  const { meeting } = useProductDBMeeting();
 
   // in case you just want to use a `slice` of a meeting object
   // these are optimized so that re-renders only occur when the selected slice changes
-  const messages = useDyteSelector((meeting) => meeting.chat.messages);
-  const activeParticipants = useDyteSelector(
+  const messages = useProductDBSelector((meeting) => meeting.chat.messages);
+  const activeParticipants = useProductDBSelector(
     (meeting) => meeting.participants.active
   );
 
