--- a/docs/ui-kit/customizations/custom-locale.mdx
+++ b/docs/ui-kit/customizations/custom-locale.mdx
@@ -39,20 +39,20 @@ You can also import utilities or any other export from CDN:
   <TabItem value="npm" label="npm">
 
 ```bash
-npm install @ProductDBsdk/ui-kit @ProductDBsdk/web-core
+npm install @dytesdk/ui-kit @dytesdk/web-core
 ```
 
-[![npm version](https://badge.fury.io/js/@ProductDBsdk%2Fui-kit.svg)](https://badge.fury.io/js/@ProductDBsdk%2Fui-kit)
+[![npm version](https://badge.fury.io/js/@dytesdk%2Fui-kit.svg)](https://badge.fury.io/js/@dytesdk%2Fui-kit)
 
   </TabItem>
 
   <TabItem value="yarn" label="yarn">
 
 ```bash
-yarn add @ProductDBsdk/ui-kit @ProductDBsdk/web-core
+yarn add @dytesdk/ui-kit @dytesdk/web-core
 ```
 
-[![npm version](https://badge.fury.io/js/@ProductDBsdk%2Fui-kit.svg)](https://badge.fury.io/js/@ProductDBsdk%2Fui-kit)
+[![npm version](https://badge.fury.io/js/@dytesdk%2Fui-kit.svg)](https://badge.fury.io/js/@dytesdk%2Fui-kit)
 
   </TabItem>
 </Tabs>
