--- a/docs/ui-kit/quickstart.mdx
+++ b/docs/ui-kit/quickstart.mdx
@@ -9,21 +9,21 @@ import {
 
 # Quickstart
 
-This quickstart shows how to use Dyte's UI Kit prebuilt components to add live
+This quickstart shows how to use ProductDB's UI Kit prebuilt components to add live
 video and audio to your web applications with minimal coding and a variety of
 meeting UI customization options.
 
 For getting started quickly, you can use our
-[sample code](https://github.com/dyte-io/html-samples#samples). You can clone
+[sample code](https://github.com/ProductDB-io/html-samples#samples). You can clone
 and run a sample application from the
-[HTML UI Kit GitHub repository](https://github.com/dyte-io/html-samples).
+[HTML UI Kit GitHub repository](https://github.com/ProductDB-io/html-samples).
 
 ## Before Getting Started
 
-- Make sure you've read the [Getting Started with Dyte](/getting-started) topic
+- Make sure you've read the [Getting Started with ProductDB](/getting-started) topic
   and completed the following steps:
-  - Create a [Dyte Developer Account](https://dev.productdb.io/)
-  - Create a [Dyte Meeting](/api/?v=v2#/operations/create_meeting)
+  - Create a [ProductDB Developer Account](https://dev.productdb.io/)
+  - Create a [ProductDB Meeting](/api/?v=v2#/operations/create_meeting)
   - [Add Participant](/api/?v=v2#/operations/add_participant) to the meeting
 
 ## Step 1: Install the SDK
@@ -77,12 +77,12 @@ yarn add @dytesdk/ui-kit @dytesdk/web-core
 | @dytesdk/ui-kit   | [![npm version](https://badge.fury.io/js/@dytesdk%2Fui-kit.svg)](https://badge.fury.io/js/@dytesdk%2Fui-kit)     |
 | @dytesdk/web-core | [![npm version](https://badge.fury.io/js/@dytesdk%2Fweb-core.svg)](https://badge.fury.io/js/@dytesdk%2Fweb-core) |
 
-## Step 2: Get Started with Dyte Prebuilt Components
+## Step 2: Get Started with ProductDB Prebuilt Components
 
 Here's a series of steps that you need to perform:
 
-1. Load the Dyte component.
-2. Initialize the Dyte client.
+1. Load the ProductDB component.
+2. Initialize the ProductDB client.
 3. Call the `init()` method and pass the `authToken`:
 
 |             |                                                                                                                                                                                   |
@@ -109,13 +109,13 @@ file={`<head>
       defineCustomElements();
   </script>
   <!-- Import Web Core via CDN too -->
-  <!-- <script src="https://cdn.dyte.in/core/dyte.js"></script> -->
+  <!-- <script src="https://cdn.ProductDB.in/core/ProductDB.js"></script> -->
 </head>
 <body>
-  <dyte-meeting id="my-meeting"></dyte-meeting>
+  <ProductDB-meeting id="my-meeting"></ProductDB-meeting>
   <script>
     const init = async () => {
-      const meeting = await DyteClient.init({
+      const meeting = await ProductDBClient.init({
         // Add your own auth token here
         authToken: yourAuthToken,
         defaults: {
